# guajillo

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
.vim/: projector.json
src/guajillo/: app.py  conn.py  exceptions.py  main.py  version.py
src/guajillo/outputs/: __init__.py  boolean.py  highstate.py  json.py  non_returns.py  profile.py  yaml.py
src/guajillo/utils/: cli.py  conn.py  console.py  outputs.py
tests/unit/utils/: test_cli.py  test_conn.py
vhs/: demo.tape
