[project]
name = "guajillo"
version = "0.1.0"
description = "a new salt-api python cli and library"
authors = [{ name = "Thomas Phipps", email = "oldtiredbastard@gmail.com" }]
dependencies = [
  "httpx[http2]>=0.27.2",
  "rich>=13.9.2",
  "httpx[brotli]>=0.27.2",
  "httpx[zstd]>=0.27.2",
  "tomli>=2.0.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest-httpx>=0.32.0",
    "pytest>=8.3.3",
    "coverage>=7.6.1",
    "coverage[toml]>=7.6.1",
    "pre-commit>=4.0.1",
    "mypy>=1.11.2",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
