[project]
name = "guajillo"
dynamic = ["version"]
description = "a new salt-api cli interface"
authors = [{ name = "Thomas Phipps", email = "oldtiredbastard@gmail.com" }]
dependencies = [
  "rich>=13.9.2",
  "httpx[brotli]>=0.27.2",
  "httpx[zstd]>=0.27.2",
  "httpx[http2]>=0.27.2",
  "tomli>=2.0.2",
  "httpx-sse>=0.4.0",
  "PyYAML>=6.0.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/whytewolf/guajillo"
Issues = "https://github.com/whytewolf/guajillo/issues"
Repository = "https://github.com/whytewolf/guajillo"

[project.scripts]
guajillo = "guajillo.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = ["buildargs_data: pass data to buildargs fixture"]

[dependency-groups]
dev = ["pytest-httpx>=0.32.0", "pytest>=8.3.3", "coverage>=7.6.1", "coverage[toml]>=7.6.1", "pre-commit>=4.0.1", "mypy>=1.11.2", "bandit>=1.7.10", "pdm-backend>=2.4.3", "pytest-asyncio>=0.24.0", "pytest-cov>=6.0.0", "types-PyYAML>=6.0.12.20240917"]
